# chirp-transcript-tool

./: .gitignore  LICENSE  README.md  audio_edit.html  audio_response.html  config.py  llm.py  main.py  prompt_chirp_doc.py  pyproject.toml  stt.py  tts.py  tts_input_long.txt  tts_prompt.txt
descriptions/: help_description.py
model_tools/: llm.py  stt.py  tts.py  tts_chirp.py
tools/: ffmpeg_cutter.py  flags_parser.py  read_transcript.py  read_transcripts.py
tools/model_tools/: stt.py  tts_chirp.py
transcriptions/: presentation_transcript.txt  tts_default2.txt  tts_event.txt  tts_long_story.txt  tts_one_hour_story.txt  tts_test_fr.txt  tts_test_it.txt  tts_test_pl.txt  tts_very_long_story.txt
