[project]
name = "ai-audio-text-speech"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-cloud-storage>=3.7.0",
    "google-cloud-texttospeech>=2.33.0",
    "google-genai==1.12.1",
    "omegaconf>=2.4.0.dev4",
    "openai-whisper>=20250625",
    "python-dotenv==1.1.0",
    "whisperx==3.7.4",
]

